# django-hurricane

./: .bumpversion.cfg  .coveragerc  .coveralls.yml  .gitignore  .gitlab-ci.yml  .gitlint  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .sonarcloud.properties  .travis.yml  CHANGELOG.md  LICENSE  README.md  RELEASE.md  locustfile.py  manage.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  sonar-project.properties  start_receiver.py  tasks.toml
.github/workflows/: cd.yml  ci.yml  codeql-analysis.yml  python-app.yml  python-loadtest.yml
docs/: conf.py  index.rst  metrics.rst  requirements.txt  todos.rst  usage.rst
docs/api/: amqp.rst  management.rst  metrics.rst  server.rst  webhooks.rst
hurricane/: kubernetes.py  server.py  testing.py
hurricane/amqp/: __init__.py  basehandler.py  loggers.py  worker.py
hurricane/management/commands/: __init__.py  (+2 more)
hurricane/metrics/: __init__.py  base.py  exceptions.py  registry.py  requests.py
hurricane/server/: __init__.py  debugging.py  django.py  exceptions.py  loggers.py  wsgi.py
hurricane/testing/: __init__.py  actors.py  drivers.py  start_k8s_server.py  start_webhook_receiver.py  testcases.py
hurricane/webhooks/: __init__.py  base.py  exceptions.py  registry.py  webhook_types.py
tests/: test_a_server.py  test_amqp.py  test_amqp_host_port.py  test_c_debugger.py  test_d_settings.py  test_debugger.py  test_e_file_upload.py  test_k8s.py  test_prometheues_exporter.py  test_server.py  test_utils.py  test_v_memory_allocations.py  test_w_custom_metrics.py  test_w_prometheus_exporter.py  test_webhooks.py  webhook_tests.py
tests/testapp/: consumer.py  settings.py  settings_amqp.py  settings_amqp_environs.py  settings_check_databases.py  settings_db_and_migrations.py  settings_hurricane_version.py  settings_media.py  settings_metrics.py  settings_operational_error.py  settings_systemcheck_error.py  urls.py  utils.py
website/: _config.yml  basic-app.md  getting-started.md  index.md  legal-notice.md  support.md
website/_includes/: footer-scripts.html  footer.html  nav.html
(+2 files in other folders)
