[tool.poetry]
name = "django-hurricane"
version = "1.6.1"
description = "A Kubernetes Native Stack Specifically Created For Django"
authors = ["Michael Schilonka <michael@blueshoe.io>", "Korbinian Habereder <Korbinian@blueshoe.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hurricane"}]
homepage = "https://django-hurricane.io/"
repository = "https://github.com/django-hurricane/django-hurricane"
documentation = "https://django-hurricane.readthedocs.io/en/latest/"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License"
]
keywords = [
    "django", 
    "kubernetes", 
    "hurricane"
]

[tool.poetry.dependencies]
python = "^3.9"
tornado = "^6.3.3"
django = ">=2.2"
requests = ">=2.25"
pika = "^1.3.2"
prometheus-client = "^0.17.1"
psutil = "^5.9.8"


[tool.poetry.group.extras.dependencies]
debugpy = ">=1.5"
pydevd-pycharm = ">=213.5605.23"


[tool.poetry.group.dev.dependencies]
locust = ">=1.4"
coverage = ">=1.4"
docker = "^6.1.3"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
mock = "^5.1.0"
black = "^23.9.1"
flake8 = "^6.1.0"
mypy = "^1.5.1"
django-stubs = {extras = ["compatible-mypy"], version = "^4.2.4"}
isort = "^5.12.0"
types-requests = "^2.31.0.8"
coveralls = "^3.3.1"
poethepoet = "^0.25.0"

[tool.isort]
profile = "black"

[tool.mypy]
exclude = ["tests", "docs"]
ignore_missing_imports = true

[tool.poe]
include = "tasks.toml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
